--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -32,4 +32,8 @@
     <string name="set_title_language">Change Language</string>
     <string name="alarm_message">Let\'s check popular github user</string>
     <string name="alarm_title">Reminder to Open App</string>
+    <string name="alarm_active">Alarm Active</string>
+    <string name="alarm_non_active">Alarm Non Active</string>
+    <string name="remove_favorite">Favorite Removed</string>
+    <string name="add_favorite">Favorite Added</string>
 </resources>
